project('cpython', 'c',
  version: '3.14.0',
  license: 'PSFL',
  default_options: ['c_std=c11'],
)

cc = meson.get_compiler('c')

py_deps = [
  cc.find_library('m'),
  dependency('expat'),
  dependency('zlib'),
  dependency('readline'),
  dependency('sqlite3'),
  dependency('bzip2'),
  dependency('libffi'),
  dependency('liblzma'),
]

pyconfig_data = configuration_data({
  'ALIGNOF_LONG': 8,
  'ALIGNOF_MAX_ALIGN_T': 16,
  'ALIGNOF_SIZE_T': 8,
  'DOUBLE_IS_LITTLE_ENDIAN_IEEE754': 1,
  'ENABLE_IPV6': 1,
  'HACL_CAN_COMPILE_SIMD128': 1,
  'HACL_CAN_COMPILE_SIMD256': 1,
  'HAVE_ACCEPT': 1,
  # 'HAVE_ACCEPT4': 1,
  'HAVE_ACOSH': 1,
  'HAVE_ADDRINFO': 1,
  'HAVE_ALARM': 1,
  'HAVE_ALLOCA_H': 1,
  'HAVE_ASINH': 1,
  'HAVE_ASM_TYPES_H': 1,
  'HAVE_ATANH': 1,
  'HAVE_BIND': 1,
  'HAVE_BIND_TEXTDOMAIN_CODESET': 1,
  'HAVE_BLUETOOTH_BLUETOOTH_H': 1,
  'HAVE_BUILTIN_ATOMIC': 1,
  'HAVE_CHMOD': 1,
  'HAVE_CHOWN': 1,
  'HAVE_CHROOT': 1,
  'HAVE_CLOCK': 1,
  'HAVE_CLOCK_GETRES': 1,
  'HAVE_CLOCK_GETTIME': 1,
  'HAVE_CLOCK_NANOSLEEP': 1,
  'HAVE_CLOCK_SETTIME': 1,
  'HAVE_CLOCK_T': 1,
  'HAVE_CLOSEFROM': 1,
  # 'HAVE_CLOSE_RANGE': 1,
  'HAVE_COMPUTED_GOTOS': 1,
  'HAVE_CONFSTR': 1,
  'HAVE_CONNECT': 1,
  # 'HAVE_COPY_FILE_RANGE': 1,
  'HAVE_CTERMID': 1,
  'HAVE_CURSES_FILTER': 1,
  'HAVE_CURSES_H': 1,
  'HAVE_CURSES_HAS_KEY': 1,
  'HAVE_CURSES_IMMEDOK': 1,
  'HAVE_CURSES_IS_PAD': 1,
  'HAVE_CURSES_IS_TERM_RESIZED': 1,
  'HAVE_CURSES_RESIZETERM': 1,
  'HAVE_CURSES_RESIZE_TERM': 1,
  'HAVE_CURSES_SYNCOK': 1,
  'HAVE_CURSES_TYPEAHEAD': 1,
  'HAVE_CURSES_USE_ENV': 1,
  'HAVE_CURSES_WCHGAT': 1,
  'HAVE_DB_H': 1,
  'HAVE_DECL_RTLD_DEEPBIND': 1,
  'HAVE_DECL_RTLD_GLOBAL': 1,
  'HAVE_DECL_RTLD_LAZY': 1,
  'HAVE_DECL_RTLD_LOCAL': 1,
  'HAVE_DECL_RTLD_MEMBER': 0,
  'HAVE_DECL_RTLD_NODELETE': 1,
  'HAVE_DECL_RTLD_NOLOAD': 1,
  'HAVE_DECL_RTLD_NOW': 1,
  'HAVE_DEVICE_MACROS': 1,
  'HAVE_DEV_PTMX': 1,
  'HAVE_DIRENT_D_TYPE': 1,
  'HAVE_DIRENT_H': 1,
  'HAVE_DIRFD': 1,
  'HAVE_DLFCN_H': 1,
  'HAVE_DLOPEN': 1,
  'HAVE_DUP': 1,
  'HAVE_DUP2': 1,
  # 'HAVE_DUP3': 1,
  'HAVE_DYNAMIC_LOADING': 1,
  'HAVE_ENDIAN_H': 1,
  'HAVE_EPOLL': 1,
  'HAVE_EPOLL_CREATE1': 1,
  'HAVE_ERF': 1,
  'HAVE_ERFC': 1,
  'HAVE_ERRNO_H': 1,
  'HAVE_EVENTFD': 1,
  'HAVE_EXECV': 1,
  'HAVE_EXPLICIT_BZERO': 1,
  'HAVE_EXPM1': 1,
  'HAVE_FACCESSAT': 1,
  'HAVE_FCHDIR': 1,
  'HAVE_FCHMOD': 1,
  'HAVE_FCHMODAT': 1,
  'HAVE_FCHOWN': 1,
  'HAVE_FCHOWNAT': 1,
  'HAVE_FCNTL_H': 1,
  'HAVE_FDATASYNC': 1,
  'HAVE_FDOPENDIR': 1,
  'HAVE_FEXECVE': 1,
  'HAVE_FFI_CLOSURE_ALLOC': 1,
  'HAVE_FFI_PREP_CIF_VAR': 1,
  'HAVE_FFI_PREP_CLOSURE_LOC': 1,
  'HAVE_FLOCK': 1,
  'HAVE_FORK': 1,
  'HAVE_FORKPTY': 1,
  'HAVE_FPATHCONF': 1,
  'HAVE_FSEEKO': 1,
  'HAVE_FSTATAT': 1,
  'HAVE_FSTATVFS': 1,
  'HAVE_FSYNC': 1,
  'HAVE_FTELLO': 1,
  'HAVE_FTIME': 1,
  'HAVE_FTRUNCATE': 1,
  'HAVE_FUTIMENS': 1,
  'HAVE_FUTIMES': 1,
  'HAVE_FUTIMESAT': 1,
  'HAVE_GAI_STRERROR': 1,
  'HAVE_GCC_ASM_FOR_X64': 1,
  'HAVE_GCC_ASM_FOR_X87': 1,
  'HAVE_GCC_UINT128_T': 1,
  'HAVE_GDBM_H': 1,
  'HAVE_GETADDRINFO': 1,
  'HAVE_GETC_UNLOCKED': 1,
  'HAVE_GETEGID': 1,
  'HAVE_GETENTROPY': 1,
  'HAVE_GETEUID': 1,
  'HAVE_GETGID': 1,
  'HAVE_GETGRENT': 1,
  'HAVE_GETGRGID': 1,
  'HAVE_GETGRGID_R': 1,
  'HAVE_GETGRNAM_R': 1,
  'HAVE_GETGROUPLIST': 1,
  'HAVE_GETGROUPS': 1,
  'HAVE_GETHOSTBYADDR': 1,
  'HAVE_GETHOSTBYNAME': 1,
  'HAVE_GETHOSTBYNAME_R': 1,
  'HAVE_GETHOSTBYNAME_R_6_ARG': 1,
  'HAVE_GETHOSTNAME': 1,
  'HAVE_GETITIMER': 1,
  'HAVE_GETLOADAVG': 1,
  'HAVE_GETLOGIN': 1,
  'HAVE_GETNAMEINFO': 1,
  'HAVE_GETPAGESIZE': 1,
  'HAVE_GETPEERNAME': 1,
  'HAVE_GETPGID': 1,
  'HAVE_GETPGRP': 1,
  'HAVE_GETPID': 1,
  'HAVE_GETPPID': 1,
  'HAVE_GETPRIORITY': 1,
  'HAVE_GETPROTOBYNAME': 1,
  'HAVE_GETPWENT': 1,
  'HAVE_GETPWNAM_R': 1,
  'HAVE_GETPWUID': 1,
  'HAVE_GETPWUID_R': 1,
  'HAVE_GETRANDOM': 1,
  'HAVE_GETRANDOM_SYSCALL': 1,
  # 'HAVE_GETRESGID': 1,
  # 'HAVE_GETRESUID': 1,
  'HAVE_GETRUSAGE': 1,
  'HAVE_GETSERVBYNAME': 1,
  'HAVE_GETSERVBYPORT': 1,
  'HAVE_GETSID': 1,
  'HAVE_GETSOCKNAME': 1,
  'HAVE_GETSPENT': 1,
  'HAVE_GETSPNAM': 1,
  'HAVE_GETUID': 1,
  'HAVE_GETWD': 1,
  'HAVE_GRANTPT': 1,
  'HAVE_GRP_H': 1,
  'HAVE_HSTRERROR': 1,
  'HAVE_HTOLE64': 1,
  'HAVE_IF_NAMEINDEX': 1,
  'HAVE_INET_ATON': 1,
  'HAVE_INET_NTOA': 1,
  'HAVE_INET_PTON': 1,
  'HAVE_INITGROUPS': 1,
  'HAVE_INTTYPES_H': 1,
  'HAVE_KILL': 1,
  'HAVE_KILLPG': 1,
  'HAVE_LANGINFO_H': 1,
  'HAVE_LCHOWN': 1,
  'HAVE_LIBDB': 1,
  'HAVE_LIBDL': 1,
  'HAVE_LIBINTL_H': 1,
  'HAVE_LIBSQLITE3': 1,
  'HAVE_LINK': 1,
  'HAVE_LINKAT': 1,
  'HAVE_LINUX_AUXVEC_H': 1,
  'HAVE_LINUX_CAN_BCM_H': 1,
  'HAVE_LINUX_CAN_H': 1,
  'HAVE_LINUX_CAN_J1939_H': 1,
  'HAVE_LINUX_CAN_RAW_FD_FRAMES': 1,
  'HAVE_LINUX_CAN_RAW_H': 1,
  'HAVE_LINUX_CAN_RAW_JOIN_FILTERS': 1,
  'HAVE_LINUX_FS_H': 1,
  'HAVE_LINUX_LIMITS_H': 1,
  'HAVE_LINUX_MEMFD_H': 1,
  'HAVE_LINUX_NETFILTER_IPV4_H': 1,
  'HAVE_LINUX_NETLINK_H': 1,
  'HAVE_LINUX_QRTR_H': 1,
  'HAVE_LINUX_RANDOM_H': 1,
  'HAVE_LINUX_SOUNDCARD_H': 1,
  'HAVE_LINUX_TIPC_H': 1,
  'HAVE_LINUX_VM_SOCKETS_H': 1,
  'HAVE_LINUX_WAIT_H': 1,
  'HAVE_LISTEN': 1,
  'HAVE_LOCKF': 1,
  'HAVE_LOG1P': 1,
  'HAVE_LOG2': 1,
  'HAVE_LOGIN_TTY': 1,
  'HAVE_LONG_DOUBLE': 1,
  'HAVE_LSTAT': 1,
  'HAVE_LUTIMES': 1,
  'HAVE_MADVISE': 1,
  'HAVE_MAKEDEV': 1,
  'HAVE_MBRTOWC': 1,
  # 'HAVE_MEMFD_CREATE': 1,
  # 'HAVE_MEMRCHR': 1,
  'HAVE_MKDIRAT': 1,
  'HAVE_MKFIFO': 1,
  'HAVE_MKFIFOAT': 1,
  'HAVE_MKNOD': 1,
  'HAVE_MKNODAT': 1,
  'HAVE_MKTIME': 1,
  'HAVE_MMAP': 1,
  # 'HAVE_MREMAP': 1,
  'HAVE_NANOSLEEP': 1,
  'HAVE_NCURSESW': 1,
  'HAVE_NCURSES_H': 1,
  'HAVE_NDBM_H': 1,
  'HAVE_NETDB_H': 1,
  'HAVE_NETINET_IN_H': 1,
  'HAVE_NETPACKET_PACKET_H': 1,
  'HAVE_NET_ETHERNET_H': 1,
  'HAVE_NET_IF_H': 1,
  'HAVE_NICE': 1,
  'HAVE_OPENAT': 1,
  'HAVE_OPENDIR': 1,
  'HAVE_OPENPTY': 1,
  'HAVE_PANELW': 1,
  'HAVE_PANEL_H': 1,
  'HAVE_PATHCONF': 1,
  'HAVE_PAUSE': 1,
  'HAVE_PIPE': 1,
  # 'HAVE_PIPE2': 1,
  'HAVE_POLL': 1,
  'HAVE_POLL_H': 1,
  'HAVE_POSIX_FADVISE': 1,
  'HAVE_POSIX_FALLOCATE': 1,
  'HAVE_POSIX_OPENPT': 1,
  'HAVE_POSIX_SPAWN': 1,
  'HAVE_POSIX_SPAWNP': 1,
  'HAVE_POSIX_SPAWN_FILE_ACTIONS_ADDCLOSEFROM_NP': 1,
  'HAVE_PREAD': 1,
  'HAVE_PREADV': 1,
  # 'HAVE_PREADV2': 1,
  # 'HAVE_PRLIMIT': 1,
  'HAVE_PROCESS_VM_READV': 1,
  'HAVE_PROTOTYPES': 1,
  'HAVE_PTHREAD_CONDATTR_SETCLOCK': 1,
  'HAVE_PTHREAD_GETCPUCLOCKID': 1,
  # 'HAVE_PTHREAD_GETNAME_NP': 1,
  'HAVE_PTHREAD_H': 1,
  'HAVE_PTHREAD_KILL': 1,
  # 'HAVE_PTHREAD_SETNAME_NP': 1,
  'HAVE_PTHREAD_SIGMASK': 1,
  'HAVE_PTSNAME': 1,
  # 'HAVE_PTSNAME_R': 1,
  'HAVE_PTY_H': 1,
  'HAVE_PWRITE': 1,
  'HAVE_PWRITEV': 1,
  # 'HAVE_PWRITEV2': 1,
  'HAVE_READLINK': 1,
  'HAVE_READLINKAT': 1,
  'HAVE_READV': 1,
  'HAVE_REALPATH': 1,
  'HAVE_RECVFROM': 1,
  'HAVE_RENAMEAT': 1,
  'HAVE_RL_APPEND_HISTORY': 1,
  'HAVE_RL_CATCH_SIGNAL': 1,
  'HAVE_RL_COMPDISP_FUNC_T': 1,
  'HAVE_RL_COMPLETION_APPEND_CHARACTER': 1,
  'HAVE_RL_COMPLETION_DISPLAY_MATCHES_HOOK': 1,
  'HAVE_RL_COMPLETION_MATCHES': 1,
  'HAVE_RL_COMPLETION_SUPPRESS_APPEND': 1,
  'HAVE_RL_PRE_INPUT_HOOK': 1,
  'HAVE_RL_RESIZE_TERMINAL': 1,
  'HAVE_SCHED_GET_PRIORITY_MAX': 1,
  'HAVE_SCHED_H': 1,
  'HAVE_SCHED_RR_GET_INTERVAL': 1,
  'HAVE_SCHED_SETAFFINITY': 1,
  'HAVE_SCHED_SETPARAM': 1,
  'HAVE_SCHED_SETSCHEDULER': 1,
  # 'HAVE_SEM_CLOCKWAIT': 1,
  'HAVE_SEM_GETVALUE': 1,
  'HAVE_SEM_OPEN': 1,
  'HAVE_SEM_TIMEDWAIT': 1,
  'HAVE_SEM_UNLINK': 1,
  'HAVE_SENDFILE': 1,
  'HAVE_SENDTO': 1,
  'HAVE_SETEGID': 1,
  'HAVE_SETEUID': 1,
  'HAVE_SETGID': 1,
  'HAVE_SETGROUPS': 1,
  'HAVE_SETHOSTNAME': 1,
  'HAVE_SETITIMER': 1,
  'HAVE_SETJMP_H': 1,
  'HAVE_SETLOCALE': 1,
  # 'HAVE_SETNS': 1,
  'HAVE_SETPGID': 1,
  'HAVE_SETPGRP': 1,
  'HAVE_SETPRIORITY': 1,
  'HAVE_SETREGID': 1,
  # 'HAVE_SETRESGID': 1,
  # 'HAVE_SETRESUID': 1,
  'HAVE_SETREUID': 1,
  'HAVE_SETSID': 1,
  'HAVE_SETSOCKOPT': 1,
  'HAVE_SETUID': 1,
  'HAVE_SETVBUF': 1,
  'HAVE_SHADOW_H': 1,
  'HAVE_SHM_OPEN': 1,
  'HAVE_SHM_UNLINK': 1,
  'HAVE_SHUTDOWN': 1,
  'HAVE_SIGACTION': 1,
  'HAVE_SIGALTSTACK': 1,
  'HAVE_SIGFILLSET': 1,
  'HAVE_SIGINFO_T_SI_BAND': 1,
  'HAVE_SIGINTERRUPT': 1,
  'HAVE_SIGNAL_H': 1,
  'HAVE_SIGPENDING': 1,
  'HAVE_SIGRELSE': 1,
  'HAVE_SIGTIMEDWAIT': 1,
  'HAVE_SIGWAIT': 1,
  'HAVE_SIGWAITINFO': 1,
  'HAVE_SNPRINTF': 1,
  'HAVE_SOCKADDR_ALG': 1,
  'HAVE_SOCKADDR_STORAGE': 1,
  'HAVE_SOCKET': 1,
  'HAVE_SOCKETPAIR': 1,
  'HAVE_SOCKLEN_T': 1,
  'HAVE_SPAWN_H': 1,
  # 'HAVE_SPLICE': 1,
  'HAVE_SSIZE_T': 1,
  'HAVE_STATVFS': 1,
  'HAVE_STAT_TV_NSEC': 1,
  'HAVE_STDINT_H': 1,
  'HAVE_STDIO_H': 1,
  'HAVE_STDLIB_H': 1,
  'HAVE_STD_ATOMIC': 1,
  'HAVE_STRFTIME': 1,
  'HAVE_STRINGS_H': 1,
  'HAVE_STRING_H': 1,
  'HAVE_STRLCPY': 1,
  'HAVE_STRSIGNAL': 1,
  'HAVE_STRUCT_PASSWD_PW_GECOS': 1,
  'HAVE_STRUCT_PASSWD_PW_PASSWD': 1,
  'HAVE_STRUCT_STAT_ST_BLKSIZE': 1,
  'HAVE_STRUCT_STAT_ST_BLOCKS': 1,
  'HAVE_STRUCT_STAT_ST_RDEV': 1,
  'HAVE_STRUCT_TM_TM_ZONE': 1,
  'HAVE_SYMLINK': 1,
  'HAVE_SYMLINKAT': 1,
  'HAVE_SYNC': 1,
  'HAVE_SYSCONF': 1,
  'HAVE_SYSEXITS_H': 1,
  'HAVE_SYSLOG_H': 1,
  'HAVE_SYSTEM': 1,
  'HAVE_SYS_AUXV_H': 1,
  'HAVE_SYS_EPOLL_H': 1,
  'HAVE_SYS_EVENTFD_H': 1,
  'HAVE_SYS_FILE_H': 1,
  'HAVE_SYS_IOCTL_H': 1,
  'HAVE_SYS_MMAN_H': 1,
  'HAVE_SYS_PARAM_H': 1,
  'HAVE_SYS_PIDFD_H': 1,
  'HAVE_SYS_POLL_H': 1,
  'HAVE_SYS_RANDOM_H': 1,
  'HAVE_SYS_RESOURCE_H': 1,
  'HAVE_SYS_SELECT_H': 1,
  'HAVE_SYS_SENDFILE_H': 1,
  'HAVE_SYS_SOCKET_H': 1,
  'HAVE_SYS_SOUNDCARD_H': 1,
  'HAVE_SYS_STATVFS_H': 1,
  'HAVE_SYS_STAT_H': 1,
  'HAVE_SYS_SYSCALL_H': 1,
  'HAVE_SYS_SYSMACROS_H': 1,
  'HAVE_SYS_TIMERFD_H': 1,
  'HAVE_SYS_TIMES_H': 1,
  'HAVE_SYS_TIME_H': 1,
  'HAVE_SYS_TYPES_H': 1,
  'HAVE_SYS_UIO_H': 1,
  'HAVE_SYS_UN_H': 1,
  'HAVE_SYS_UTSNAME_H': 1,
  'HAVE_SYS_WAIT_H': 1,
  'HAVE_SYS_XATTR_H': 1,
  'HAVE_TCGETPGRP': 1,
  'HAVE_TCSETPGRP': 1,
  'HAVE_TEMPNAM': 1,
  'HAVE_TERMIOS_H': 1,
  'HAVE_TERM_H': 1,
  'HAVE_TIMEGM': 1,
  'HAVE_TIMERFD_CREATE': 1,
  'HAVE_TIMES': 1,
  'HAVE_TMPFILE': 1,
  'HAVE_TMPNAM': 1,
  'HAVE_TMPNAM_R': 1,
  'HAVE_TM_ZONE': 1,
  'HAVE_TRUNCATE': 1,
  'HAVE_TTYNAME': 1,
  'HAVE_UMASK': 1,
  'HAVE_UNAME': 1,
  'HAVE_UNISTD_H': 1,
  'HAVE_UNLINKAT': 1,
  'HAVE_UNLOCKPT': 1,
  # 'HAVE_UNSHARE': 1,
  'HAVE_UTIMENSAT': 1,
  'HAVE_UTIMES': 1,
  'HAVE_UTIME_H': 1,
  'HAVE_UTMP_H': 1,
  'HAVE_UUID_GENERATE_TIME_SAFE': 1,
  'HAVE_UUID_H': 1,
  'HAVE_VFORK': 1,
  'HAVE_WAIT': 1,
  'HAVE_WAIT3': 1,
  'HAVE_WAIT4': 1,
  'HAVE_WAITID': 1,
  'HAVE_WAITPID': 1,
  'HAVE_WCHAR_H': 1,
  'HAVE_WCSCOLL': 1,
  'HAVE_WCSFTIME': 1,
  'HAVE_WCSXFRM': 1,
  'HAVE_WMEMCMP': 1,
  'HAVE_WORKING_TZSET': 1,
  'HAVE_WRITEV': 1,
  'HAVE_ZLIB_COPY': 1,
  'HAVE___UINT128_T': 1,
  'MAJOR_IN_SYSMACROS': 1,
  'MVWDELCH_IS_EXPRESSION': 1,
  'PTHREAD_KEY_T_IS_COMPATIBLE_WITH_INT': 1,
  'PTHREAD_SYSTEM_SCHED_SUPPORTED': 1,
  'PYTHREAD_NAME_MAXLEN': 15,
  'PY_BUILTIN_HASHLIB_HASHES': '"md5,sha1,sha2,sha3,blake2"',
  'PY_COERCE_C_LOCALE': 1,
  'PY_HAVE_PERF_TRAMPOLINE': 1,
  'PY_SQLITE_HAVE_SERIALIZE': 1,
  'PY_SSL_DEFAULT_CIPHERS': 1,
  'PY_SUPPORT_TIER': 1,
  'Py_FFI_SUPPORT_C_COMPLEX': 1,
  'Py_HAVE_C_COMPLEX': 1,
  'Py_NORMALIZE_CENTURY': 1,
  'Py_STRFTIME_C99_SUPPORT': 1,
  'RETSIGTYPE': 'void',
  'SIZEOF_DOUBLE': 8,
  'SIZEOF_FLOAT': 4,
  'SIZEOF_FPOS_T': 16,
  'SIZEOF_INT': 4,
  'SIZEOF_LONG': 8,
  'SIZEOF_LONG_DOUBLE': 16,
  'SIZEOF_LONG_LONG': 8,
  'SIZEOF_OFF_T': 8,
  'SIZEOF_PID_T': 4,
  'SIZEOF_PTHREAD_KEY_T': 4,
  'SIZEOF_PTHREAD_T': 8,
  'SIZEOF_SHORT': 2,
  'SIZEOF_SIZE_T': 8,
  'SIZEOF_TIME_T': 8,
  'SIZEOF_UINTPTR_T': 8,
  'SIZEOF_VOID_P': 8,
  'SIZEOF_WCHAR_T': 4,
  'SIZEOF__BOOL': 1,
  'STDC_HEADERS': 1,
  'SYS_SELECT_WITH_SYS_TIME': 1,
  'WITH_DECIMAL_CONTEXTVAR': 1,
  'WITH_DOC_STRINGS': 1,
  'WITH_MIMALLOC': 1,
  'WITH_PYMALLOC': 1,
  '_DARWIN_C_SOURCE': 1,
  '_FILE_OFFSET_BITS': 64,
  '_LARGEFILE_SOURCE': 1,
  '_NETBSD_SOURCE': 1,
  '_POSIX_C_SOURCE': '200809L',
  '_PYTHONFRAMEWORK': '""',
  '_REENTRANT': 1,
  # '_XOPEN_SOURCE': 700,
  '_XOPEN_SOURCE_EXTENDED': 1,
  '__BSD_VISIBLE': 1,
})

pyconfig_h = configure_file(
  output: 'pyconfig.h',
  configuration: pyconfig_data)

mod_names = [
  'atexit',
  'faulthandler',
  'posix',
  '_signal',
  '_tracemalloc',
  '_suggestions',
  '_codecs',
  '_collections',
  'errno',
  '_io',
  'itertools',
  '_sre',
  '_sysconfig',
  '_thread',
  'time',
  '_typing',
  '_weakref',
  '_abc',
  '_functools',
  '_locale',
  '_opcode',
  '_operator',
  '_stat',
  '_symtable',
  'pwd',
]

mod_fwd_decl = []
mod_table_rows = []
foreach name : mod_names
  mod_fwd_decl += 'extern PyObject* PyInit_@0@(void);'.format(name)
  mod_table_rows += '    {"@0@", PyInit_@0@},'.format(name)
endforeach

sed = find_program('sed')
sh = find_program('sh')
config_c_in = meson.current_build_dir() / 'config.c.in'
marker_cmd = sed.full_path() + ' -e "s/\/\* -- ADDMODULE MARKER 1 -- \*\//@MARKER1@/g" -e "s/\/\* -- ADDMODULE MARKER 2 -- \*\//@MARKER2@/g"' + f' @0@/Modules/config.c.in > @1@'.format(meson.current_source_dir(), config_c_in)
run_command(sh, '-c', marker_cmd, check: true)

config_c = configure_file(
  input: config_c_in,
  output: 'config.c',
  configuration: {
    'MARKER1': '\n'.join(mod_fwd_decl),
    'MARKER2': '\n'.join(mod_table_rows),
  })

py_include_dirs = include_directories(
  '.',
  'Include',
  'Include/internal',
  'Include/internal/mimalloc',
  'Python',
)

py_sources = files(
  'Objects/abstract.c',
  'Objects/boolobject.c',
  'Objects/bytearrayobject.c',
  'Objects/bytes_methods.c',
  'Objects/bytesobject.c',
  'Objects/call.c',
  'Objects/capsule.c',
  'Objects/cellobject.c',
  'Objects/classobject.c',
  'Objects/clinic/bytearrayobject.c.h',
  'Objects/clinic/bytesobject.c.h',
  'Objects/clinic/classobject.c.h',
  'Objects/clinic/codeobject.c.h',
  'Objects/clinic/complexobject.c.h',
  'Objects/clinic/descrobject.c.h',
  'Objects/clinic/dictobject.c.h',
  'Objects/clinic/enumobject.c.h',
  'Objects/clinic/floatobject.c.h',
  'Objects/clinic/funcobject.c.h',
  'Objects/clinic/listobject.c.h',
  'Objects/clinic/longobject.c.h',
  'Objects/clinic/memoryobject.c.h',
  'Objects/clinic/moduleobject.c.h',
  'Objects/clinic/odictobject.c.h',
  'Objects/clinic/setobject.c.h',
  'Objects/clinic/structseq.c.h',
  'Objects/clinic/tupleobject.c.h',
  'Objects/clinic/typeobject.c.h',
  'Objects/clinic/typevarobject.c.h',
  'Objects/clinic/unicodeobject.c.h',
  'Objects/codeobject.c',
  'Objects/complexobject.c',
  'Objects/descrobject.c',
  'Objects/dictobject.c',
  'Objects/enumobject.c',
  'Objects/exceptions.c',
  'Objects/fileobject.c',
  'Objects/floatobject.c',
  'Objects/frameobject.c',
  'Objects/funcobject.c',
  'Objects/genericaliasobject.c',
  'Objects/genobject.c',
  'Objects/iterobject.c',
  'Objects/listobject.c',
  'Objects/longobject.c',
  'Objects/memoryobject.c',
  'Objects/methodobject.c',
  # 'Objects/mimalloc/alloc-aligned.c',
  # 'Objects/mimalloc/alloc-override.c',
  # 'Objects/mimalloc/alloc-posix.c',
  # 'Objects/mimalloc/alloc.c',
  # 'Objects/mimalloc/arena.c',
  # 'Objects/mimalloc/bitmap.c',
  # 'Objects/mimalloc/bitmap.h',
  # 'Objects/mimalloc/heap.c',
  # 'Objects/mimalloc/init.c',
  # 'Objects/mimalloc/options.c',
  # 'Objects/mimalloc/os.c',
  # 'Objects/mimalloc/page-queue.c',
  # 'Objects/mimalloc/page.c',
  # 'Objects/mimalloc/prim/osx/alloc-override-zone.c',
  # 'Objects/mimalloc/prim/osx/prim.c',
  # 'Objects/mimalloc/prim/prim.c',
  # 'Objects/mimalloc/prim/unix/prim.c',
  # 'Objects/mimalloc/prim/wasi/prim.c',
  # 'Objects/mimalloc/prim/windows/etw.h',
  # 'Objects/mimalloc/prim/windows/prim.c',
  # 'Objects/mimalloc/random.c',
  # 'Objects/mimalloc/segment-map.c',
  # 'Objects/mimalloc/segment.c',
  # 'Objects/mimalloc/static.c',
  # 'Objects/mimalloc/stats.c',
  'Objects/moduleobject.c',
  'Objects/namespaceobject.c',
  'Objects/object.c',
  'Objects/obmalloc.c',
  'Objects/odictobject.c',
  'Objects/picklebufobject.c',
  'Objects/rangeobject.c',
  'Objects/setobject.c',
  'Objects/sliceobject.c',
  'Objects/stringlib/asciilib.h',
  'Objects/stringlib/clinic/transmogrify.h.h',
  'Objects/stringlib/codecs.h',
  'Objects/stringlib/count.h',
  'Objects/stringlib/ctype.h',
  'Objects/stringlib/eq.h',
  'Objects/stringlib/fastsearch.h',
  'Objects/stringlib/find.h',
  'Objects/stringlib/find_max_char.h',
  'Objects/stringlib/join.h',
  'Objects/stringlib/localeutil.h',
  'Objects/stringlib/partition.h',
  'Objects/stringlib/replace.h',
  'Objects/stringlib/repr.h',
  'Objects/stringlib/split.h',
  'Objects/stringlib/stringdefs.h',
  'Objects/stringlib/transmogrify.h',
  'Objects/stringlib/ucs1lib.h',
  'Objects/stringlib/ucs2lib.h',
  'Objects/stringlib/ucs4lib.h',
  'Objects/stringlib/undef.h',
  'Objects/stringlib/unicode_format.h',
  'Objects/structseq.c',
  'Objects/tupleobject.c',
  'Objects/typeobject.c',
  'Objects/typevarobject.c',
  'Objects/unicodectype.c',
  'Objects/unicodeobject.c',
  'Objects/unicodetype_db.h',
  'Objects/unionobject.c',
  'Objects/weakrefobject.c',
  # 'PC/WinMain.c',
  # 'PC/_testconsole.c',
  # 'PC/clinic/_testconsole.c.h',
  # 'PC/clinic/_wmimodule.cpp.h',
  # 'PC/clinic/msvcrtmodule.c.h',
  # 'PC/clinic/winreg.c.h',
  # 'PC/clinic/winsound.c.h',
  # 'PC/config.c',
  # 'PC/config_minimal.c',
  # 'PC/dl_nt.c',
  # 'PC/errmap.h',
  # 'PC/frozen_dllmain.c',
  # 'PC/invalid_parameter_handler.c',
  # 'PC/launcher.c',
  # 'PC/launcher2.c',
  # 'PC/msvcrtmodule.c',
  # 'PC/python3dll.c',
  # 'PC/python_ver_rc.h',
  # 'PC/venvlauncher.c',
  # 'PC/winreg.c',
  # 'PC/winsound.c',
  'Parser/action_helpers.c',
  'Parser/lexer/buffer.c',
  'Parser/lexer/buffer.h',
  'Parser/lexer/lexer.c',
  'Parser/lexer/lexer.h',
  'Parser/lexer/state.c',
  'Parser/lexer/state.h',
  'Parser/myreadline.c',
  'Parser/parser.c',
  'Parser/peg_api.c',
  'Parser/pegen.c',
  'Parser/pegen.h',
  'Parser/pegen_errors.c',
  'Parser/string_parser.c',
  'Parser/string_parser.h',
  'Parser/token.c',
  'Parser/tokenizer/file_tokenizer.c',
  'Parser/tokenizer/helpers.c',
  'Parser/tokenizer/helpers.h',
  'Parser/tokenizer/readline_tokenizer.c',
  'Parser/tokenizer/string_tokenizer.c',
  'Parser/tokenizer/tokenizer.h',
  'Parser/tokenizer/utf8_tokenizer.c',
  # 'Programs/_bootstrap_python.c',
  # 'Programs/_freeze_module.c',
  # 'Programs/_testembed.c',
  # 'Programs/python.c',
  # 'Programs/test_frozenmain.h',
  'Python/Python-ast.c',
  'Python/Python-tokenize.c',
  'Python/_warnings.c',
  'Python/asdl.c',
  'Python/assemble.c',
  'Python/ast.c',
  'Python/ast_opt.c',
  'Python/ast_unparse.c',
  'Python/bltinmodule.c',
  'Python/bootstrap_hash.c',
  'Python/brc.c',
  # 'Python/bytecodes.c',
  'Python/ceval.c',
  'Python/ceval_gil.c',
  'Python/ceval_macros.h',
  'Python/clinic/Python-tokenize.c.h',
  'Python/clinic/_warnings.c.h',
  'Python/clinic/bltinmodule.c.h',
  'Python/clinic/context.c.h',
  'Python/clinic/import.c.h',
  'Python/clinic/instruction_sequence.c.h',
  'Python/clinic/instrumentation.c.h',
  'Python/clinic/marshal.c.h',
  'Python/clinic/sysmodule.c.h',
  'Python/clinic/traceback.c.h',
  'Python/codecs.c',
  'Python/codegen.c',
  'Python/compile.c',
  'Python/condvar.h',
  'Python/config_common.h',
  'Python/context.c',
  'Python/critical_section.c',
  'Python/crossinterp.c',
  'Python/crossinterp_data_lookup.h',
  'Python/crossinterp_exceptions.h',
  'Python/dtoa.c',
  'Python/dup2.c',
  'Python/dynamic_annotations.c',
  # 'Python/dynload_hpux.c',
  'Python/dynload_shlib.c',
  # 'Python/dynload_stub.c',
  # 'Python/dynload_win.c',
  # 'Python/emscripten_signal.c',
  # 'Python/emscripten_trampoline.c',
  'Python/errors.c',
  'Python/executor_cases.c.h',
  'Python/fileutils.c',
  'Python/flowgraph.c',
  'Python/formatter_unicode.c',
  'Python/frame.c',
  # 'Python/frozen.c',
  # 'Python/frozenmain.c',
  'Python/future.c',
  'Python/gc.c',
  'Python/gc_free_threading.c',
  'Python/gc_gil.c',
  'Python/generated_cases.c.h',
  'Python/getargs.c',
  'Python/getcompiler.c',
  'Python/getcopyright.c',
  'Python/getopt.c',
  'Python/getplatform.c',
  'Python/getversion.c',
  'Python/hamt.c',
  'Python/hashtable.c',
  'Python/import.c',
  'Python/importdl.c',
  'Python/index_pool.c',
  'Python/initconfig.c',
  'Python/instruction_sequence.c',
  'Python/instrumentation.c',
  'Python/interpconfig.c',
  'Python/intrinsics.c',
  'Python/jit.c',
  'Python/legacy_tracing.c',
  'Python/lock.c',
  'Python/marshal.c',
  'Python/modsupport.c',
  'Python/mysnprintf.c',
  'Python/mystrtoul.c',
  'Python/object_stack.c',
  'Python/opcode_targets.h',
  'Python/optimizer.c',
  'Python/optimizer_analysis.c',
  # 'Python/optimizer_bytecodes.c',
  'Python/optimizer_cases.c.h',
  'Python/optimizer_symbols.c',
  'Python/parking_lot.c',
  'Python/pathconfig.c',
  'Python/perf_jit_trampoline.c',
  'Python/perf_trampoline.c',
  'Python/preconfig.c',
  'Python/pyarena.c',
  'Python/pyctype.c',
  'Python/pyfpe.c',
  'Python/pyhash.c',
  'Python/pylifecycle.c',
  'Python/pymath.c',
  'Python/pystate.c',
  'Python/pystrcmp.c',
  'Python/pystrhex.c',
  'Python/pystrtod.c',
  'Python/pythonrun.c',
  'Python/pytime.c',
  'Python/qsbr.c',
  'Python/specialize.c',
  'Python/stdlib_module_names.h',
  'Python/structmember.c',
  'Python/suggestions.c',
  'Python/symtable.c',
  'Python/sysmodule.c',
  'Python/thread.c',
  'Python/thread_nt.h',
  'Python/thread_pthread.h',
  'Python/thread_pthread_stubs.h',
  'Python/traceback.c',
  'Python/tracemalloc.c',
  'Python/uniqueid.c',

  'Python/asm_trampoline.S',

  'Modules/_abc.c',
  'Modules/_asynciomodule.c',
  'Modules/_bisectmodule.c',
  'Modules/_bz2module.c',
  'Modules/_codecsmodule.c',
  'Modules/_collectionsmodule.c',
  'Modules/_complex.h',
  'Modules/_contextvarsmodule.c',
  'Modules/_csv.c',
  'Modules/_ctypes/_ctypes.c',
  # 'Modules/_ctypes/_ctypes_test.c',
  # 'Modules/_ctypes/_ctypes_test.h',
  # 'Modules/_ctypes/_ctypes_test_generated.c.h',
  'Modules/_ctypes/callbacks.c',
  'Modules/_ctypes/callproc.c',
  'Modules/_ctypes/cfield.c',
  'Modules/_ctypes/clinic/_ctypes.c.h',
  'Modules/_ctypes/clinic/callproc.c.h',
  'Modules/_ctypes/clinic/cfield.c.h',
  'Modules/_ctypes/ctypes.h',
  'Modules/_ctypes/malloc_closure.c',
  'Modules/_ctypes/stgdict.c',
  # 'Modules/_curses_panel.c',
  # 'Modules/_cursesmodule.c',
  'Modules/_datetimemodule.c',
  # 'Modules/_dbmmodule.c',
  # 'Modules/_decimal/_decimal.c',
  # 'Modules/_decimal/docstrings.h',
  # 'Modules/_decimal/libmpdec/basearith.c',
  # 'Modules/_decimal/libmpdec/basearith.h',
  # 'Modules/_decimal/libmpdec/bench.c',
  # 'Modules/_decimal/libmpdec/bench_full.c',
  # 'Modules/_decimal/libmpdec/bits.h',
  # 'Modules/_decimal/libmpdec/constants.c',
  # 'Modules/_decimal/libmpdec/constants.h',
  # 'Modules/_decimal/libmpdec/context.c',
  # 'Modules/_decimal/libmpdec/convolute.c',
  # 'Modules/_decimal/libmpdec/convolute.h',
  # 'Modules/_decimal/libmpdec/crt.c',
  # 'Modules/_decimal/libmpdec/crt.h',
  # 'Modules/_decimal/libmpdec/difradix2.c',
  # 'Modules/_decimal/libmpdec/difradix2.h',
  # 'Modules/_decimal/libmpdec/examples/compare.c',
  # 'Modules/_decimal/libmpdec/examples/div.c',
  # 'Modules/_decimal/libmpdec/examples/divmod.c',
  # 'Modules/_decimal/libmpdec/examples/multiply.c',
  # 'Modules/_decimal/libmpdec/examples/pow.c',
  # 'Modules/_decimal/libmpdec/examples/powmod.c',
  # 'Modules/_decimal/libmpdec/examples/shift.c',
  # 'Modules/_decimal/libmpdec/examples/sqrt.c',
  # 'Modules/_decimal/libmpdec/fnt.c',
  # 'Modules/_decimal/libmpdec/fnt.h',
  # 'Modules/_decimal/libmpdec/fourstep.c',
  # 'Modules/_decimal/libmpdec/fourstep.h',
  # 'Modules/_decimal/libmpdec/io.c',
  # 'Modules/_decimal/libmpdec/io.h',
  # 'Modules/_decimal/libmpdec/mpalloc.c',
  # 'Modules/_decimal/libmpdec/mpalloc.h',
  # 'Modules/_decimal/libmpdec/mpdecimal.c',
  # 'Modules/_decimal/libmpdec/mpdecimal.h',
  # 'Modules/_decimal/libmpdec/mpsignal.c',
  # 'Modules/_decimal/libmpdec/numbertheory.c',
  # 'Modules/_decimal/libmpdec/numbertheory.h',
  # 'Modules/_decimal/libmpdec/sixstep.c',
  # 'Modules/_decimal/libmpdec/sixstep.h',
  # 'Modules/_decimal/libmpdec/transpose.c',
  # 'Modules/_decimal/libmpdec/transpose.h',
  # 'Modules/_decimal/libmpdec/typearith.h',
  # 'Modules/_decimal/libmpdec/umodarith.h',
  # 'Modules/_decimal/windows/mpdecimal.h',
  'Modules/_elementtree.c',
  'Modules/_functoolsmodule.c',
  # 'Modules/_gdbmmodule.c',
  # 'Modules/_hacl/Hacl_Hash_Blake2b.c',
  # 'Modules/_hacl/Hacl_Hash_Blake2b.h',
  # 'Modules/_hacl/Hacl_Hash_Blake2b_Simd256.c',
  # 'Modules/_hacl/Hacl_Hash_Blake2b_Simd256.h',
  # 'Modules/_hacl/Hacl_Hash_Blake2b_Simd256_universal2.c',
  # 'Modules/_hacl/Hacl_Hash_Blake2s.c',
  # 'Modules/_hacl/Hacl_Hash_Blake2s.h',
  # 'Modules/_hacl/Hacl_Hash_Blake2s_Simd128.c',
  # 'Modules/_hacl/Hacl_Hash_Blake2s_Simd128.h',
  # 'Modules/_hacl/Hacl_Hash_Blake2s_Simd128_universal2.c',
  # 'Modules/_hacl/Hacl_Hash_MD5.c',
  # 'Modules/_hacl/Hacl_Hash_MD5.h',
  # 'Modules/_hacl/Hacl_Hash_SHA1.c',
  # 'Modules/_hacl/Hacl_Hash_SHA1.h',
  # 'Modules/_hacl/Hacl_Hash_SHA2.c',
  # 'Modules/_hacl/Hacl_Hash_SHA2.h',
  # 'Modules/_hacl/Hacl_Hash_SHA3.c',
  # 'Modules/_hacl/Hacl_Hash_SHA3.h',
  # 'Modules/_hacl/Hacl_Streaming_Types.h',
  # 'Modules/_hacl/Lib_Memzero0.c',
  # 'Modules/_hacl/include/krml/FStar_UInt128_Verified.h',
  # 'Modules/_hacl/include/krml/FStar_UInt_8_16_32_64.h',
  # 'Modules/_hacl/include/krml/fstar_uint128_struct_endianness.h',
  # 'Modules/_hacl/include/krml/internal/target.h',
  # 'Modules/_hacl/include/krml/lowstar_endianness.h',
  # 'Modules/_hacl/include/krml/types.h',
  # 'Modules/_hacl/internal/Hacl_Hash_Blake2b.h',
  # 'Modules/_hacl/internal/Hacl_Hash_Blake2b_Simd256.h',
  # 'Modules/_hacl/internal/Hacl_Hash_Blake2s.h',
  # 'Modules/_hacl/internal/Hacl_Hash_Blake2s_Simd128.h',
  # 'Modules/_hacl/internal/Hacl_Hash_MD5.h',
  # 'Modules/_hacl/internal/Hacl_Hash_SHA1.h',
  # 'Modules/_hacl/internal/Hacl_Hash_SHA2.h',
  # 'Modules/_hacl/internal/Hacl_Hash_SHA3.h',
  # 'Modules/_hacl/internal/Hacl_Impl_Blake2_Constants.h',
  # 'Modules/_hacl/lib_memzero0.h',
  # 'Modules/_hacl/libintvector.h',
  # 'Modules/_hacl/python_hacl_namespaces.h',
  # 'Modules/_hashopenssl.c',
  'Modules/_heapqmodule.c',
  'Modules/_interpchannelsmodule.c',
  'Modules/_interpqueuesmodule.c',
  'Modules/_interpreters_common.h',
  'Modules/_interpretersmodule.c',
  'Modules/_io/_iomodule.c',
  'Modules/_io/_iomodule.h',
  'Modules/_io/bufferedio.c',
  'Modules/_io/bytesio.c',
  'Modules/_io/clinic/_iomodule.c.h',
  'Modules/_io/clinic/bufferedio.c.h',
  'Modules/_io/clinic/bytesio.c.h',
  'Modules/_io/clinic/fileio.c.h',
  'Modules/_io/clinic/iobase.c.h',
  'Modules/_io/clinic/stringio.c.h',
  'Modules/_io/clinic/textio.c.h',
  'Modules/_io/clinic/winconsoleio.c.h',
  'Modules/_io/fileio.c',
  'Modules/_io/iobase.c',
  'Modules/_io/stringio.c',
  'Modules/_io/textio.c',
  'Modules/_io/winconsoleio.c',
  'Modules/_json.c',
  'Modules/_localemodule.c',
  'Modules/_lsprof.c',
  'Modules/_lzmamodule.c',
  'Modules/_math.h',
  'Modules/_multiprocessing/clinic/multiprocessing.c.h',
  'Modules/_multiprocessing/clinic/posixshmem.c.h',
  'Modules/_multiprocessing/clinic/semaphore.c.h',
  'Modules/_multiprocessing/multiprocessing.c',
  'Modules/_multiprocessing/multiprocessing.h',
  'Modules/_multiprocessing/posixshmem.c',
  'Modules/_multiprocessing/semaphore.c',
  'Modules/_opcode.c',
  'Modules/_operator.c',
  'Modules/_pickle.c',
  'Modules/_posixsubprocess.c',
  'Modules/_queuemodule.c',
  'Modules/_randommodule.c',
  # 'Modules/_scproxy.c',
  'Modules/_sqlite/blob.c',
  'Modules/_sqlite/blob.h',
  'Modules/_sqlite/clinic/_sqlite3.connect.c.h',
  'Modules/_sqlite/clinic/blob.c.h',
  'Modules/_sqlite/clinic/connection.c.h',
  'Modules/_sqlite/clinic/cursor.c.h',
  'Modules/_sqlite/clinic/module.c.h',
  'Modules/_sqlite/clinic/row.c.h',
  'Modules/_sqlite/connection.c',
  'Modules/_sqlite/connection.h',
  'Modules/_sqlite/cursor.c',
  'Modules/_sqlite/cursor.h',
  'Modules/_sqlite/microprotocols.c',
  'Modules/_sqlite/microprotocols.h',
  'Modules/_sqlite/module.c',
  'Modules/_sqlite/module.h',
  'Modules/_sqlite/prepare_protocol.c',
  'Modules/_sqlite/prepare_protocol.h',
  'Modules/_sqlite/row.c',
  'Modules/_sqlite/row.h',
  'Modules/_sqlite/statement.c',
  'Modules/_sqlite/statement.h',
  'Modules/_sqlite/util.c',
  'Modules/_sqlite/util.h',
  'Modules/_sre/clinic/sre.c.h',
  'Modules/_sre/sre.c',
  'Modules/_sre/sre.h',
  'Modules/_sre/sre_constants.h',
  'Modules/_sre/sre_lib.h',
  'Modules/_sre/sre_targets.h',
  # 'Modules/_ssl.c',
  # 'Modules/_ssl.h',
  # 'Modules/_ssl/cert.c',
  # 'Modules/_ssl/clinic/cert.c.h',
  # 'Modules/_ssl/debughelpers.c',
  # 'Modules/_ssl/misc.c',
  # 'Modules/_ssl_data_111.h',
  # 'Modules/_ssl_data_300.h',
  # 'Modules/_ssl_data_34.h',
  'Modules/_stat.c',
  'Modules/_statisticsmodule.c',
  'Modules/_struct.c',
  'Modules/_suggestions.c',
  'Modules/_sysconfig.c',
  # 'Modules/_testbuffer.c',
  # 'Modules/_testcapi/abstract.c',
  # 'Modules/_testcapi/buffer.c',
  # 'Modules/_testcapi/bytes.c',
  # 'Modules/_testcapi/clinic/exceptions.c.h',
  # 'Modules/_testcapi/clinic/float.c.h',
  # 'Modules/_testcapi/clinic/long.c.h',
  # 'Modules/_testcapi/clinic/vectorcall.c.h',
  # 'Modules/_testcapi/clinic/watchers.c.h',
  # 'Modules/_testcapi/code.c',
  # 'Modules/_testcapi/codec.c',
  # 'Modules/_testcapi/complex.c',
  # 'Modules/_testcapi/config.c',
  # 'Modules/_testcapi/datetime.c',
  # 'Modules/_testcapi/dict.c',
  # 'Modules/_testcapi/docstring.c',
  # 'Modules/_testcapi/exceptions.c',
  # 'Modules/_testcapi/file.c',
  # 'Modules/_testcapi/float.c',
  # 'Modules/_testcapi/gc.c',
  # 'Modules/_testcapi/getargs.c',
  # 'Modules/_testcapi/hash.c',
  # 'Modules/_testcapi/heaptype.c',
  # 'Modules/_testcapi/immortal.c',
  # 'Modules/_testcapi/list.c',
  # 'Modules/_testcapi/long.c',
  # 'Modules/_testcapi/mem.c',
  # 'Modules/_testcapi/monitoring.c',
  # 'Modules/_testcapi/numbers.c',
  # 'Modules/_testcapi/object.c',
  # 'Modules/_testcapi/parts.h',
  # 'Modules/_testcapi/pyatomic.c',
  # 'Modules/_testcapi/run.c',
  # 'Modules/_testcapi/set.c',
  # 'Modules/_testcapi/structmember.c',
  # 'Modules/_testcapi/time.c',
  # 'Modules/_testcapi/tuple.c',
  # 'Modules/_testcapi/unicode.c',
  # 'Modules/_testcapi/util.h',
  # 'Modules/_testcapi/vectorcall.c',
  # 'Modules/_testcapi/watchers.c',
  # 'Modules/_testcapimodule.c',
  # 'Modules/_testclinic.c',
  # 'Modules/_testclinic_limited.c',
  # 'Modules/_testexternalinspection.c',
  # 'Modules/_testimportmultiple.c',
  # 'Modules/_testinternalcapi.c',
  # 'Modules/_testinternalcapi/clinic/test_lock.c.h',
  # 'Modules/_testinternalcapi/parts.h',
  # 'Modules/_testinternalcapi/pytime.c',
  # 'Modules/_testinternalcapi/set.c',
  # 'Modules/_testinternalcapi/test_critical_sections.c',
  # 'Modules/_testinternalcapi/test_lock.c',
  # 'Modules/_testlimitedcapi.c',
  # 'Modules/_testlimitedcapi/abstract.c',
  # 'Modules/_testlimitedcapi/bytearray.c',
  # 'Modules/_testlimitedcapi/bytes.c',
  # 'Modules/_testlimitedcapi/clinic/heaptype_relative.c.h',
  # 'Modules/_testlimitedcapi/clinic/long.c.h',
  # 'Modules/_testlimitedcapi/clinic/vectorcall_limited.c.h',
  # 'Modules/_testlimitedcapi/codec.c',
  # 'Modules/_testlimitedcapi/complex.c',
  # 'Modules/_testlimitedcapi/dict.c',
  # 'Modules/_testlimitedcapi/eval.c',
  # 'Modules/_testlimitedcapi/float.c',
  # 'Modules/_testlimitedcapi/heaptype_relative.c',
  # 'Modules/_testlimitedcapi/list.c',
  # 'Modules/_testlimitedcapi/long.c',
  # 'Modules/_testlimitedcapi/object.c',
  # 'Modules/_testlimitedcapi/parts.h',
  # 'Modules/_testlimitedcapi/pyos.c',
  # 'Modules/_testlimitedcapi/set.c',
  # 'Modules/_testlimitedcapi/sys.c',
  # 'Modules/_testlimitedcapi/testcapi_long.h',
  # 'Modules/_testlimitedcapi/tuple.c',
  # 'Modules/_testlimitedcapi/unicode.c',
  # 'Modules/_testlimitedcapi/util.h',
  # 'Modules/_testlimitedcapi/vectorcall_limited.c',
  # 'Modules/_testmultiphase.c',
  # 'Modules/_testsinglephase.c',
  'Modules/_threadmodule.c',
  # 'Modules/_tkinter.c',
  'Modules/_tracemalloc.c',
  'Modules/_typingmodule.c',
  # 'Modules/_uuidmodule.c',
  'Modules/_weakref.c',
  # 'Modules/_winapi.c',
  # 'Modules/_xxtestfuzz/_xxtestfuzz.c',
  # 'Modules/_xxtestfuzz/fuzzer.c',
  'Modules/_zoneinfo.c',
  'Modules/addrinfo.h',
  'Modules/arraymodule.c',
  'Modules/atexitmodule.c',
  'Modules/binascii.c',
  # 'Modules/blake2module.c',
  # 'Modules/cjkcodecs/_codecs_cn.c',
  # 'Modules/cjkcodecs/_codecs_hk.c',
  # 'Modules/cjkcodecs/_codecs_iso2022.c',
  # 'Modules/cjkcodecs/_codecs_jp.c',
  # 'Modules/cjkcodecs/_codecs_kr.c',
  # 'Modules/cjkcodecs/_codecs_tw.c',
  # 'Modules/cjkcodecs/alg_jisx0201.h',
  # 'Modules/cjkcodecs/cjkcodecs.h',
  # 'Modules/cjkcodecs/clinic/multibytecodec.c.h',
  # 'Modules/cjkcodecs/emu_jisx0213_2000.h',
  # 'Modules/cjkcodecs/mappings_cn.h',
  # 'Modules/cjkcodecs/mappings_hk.h',
  # 'Modules/cjkcodecs/mappings_jisx0213_pair.h',
  # 'Modules/cjkcodecs/mappings_jp.h',
  # 'Modules/cjkcodecs/mappings_kr.h',
  # 'Modules/cjkcodecs/mappings_tw.h',
  # 'Modules/cjkcodecs/multibytecodec.c',
  # 'Modules/cjkcodecs/multibytecodec.h',
  # 'Modules/clinic/_abc.c.h',
  # 'Modules/clinic/_asynciomodule.c.h',
  # 'Modules/clinic/_bisectmodule.c.h',
  # 'Modules/clinic/_bz2module.c.h',
  # 'Modules/clinic/_codecsmodule.c.h',
  # 'Modules/clinic/_collectionsmodule.c.h',
  # 'Modules/clinic/_contextvarsmodule.c.h',
  # 'Modules/clinic/_csv.c.h',
  # 'Modules/clinic/_curses_panel.c.h',
  # 'Modules/clinic/_cursesmodule.c.h',
  # 'Modules/clinic/_datetimemodule.c.h',
  # 'Modules/clinic/_dbmmodule.c.h',
  # 'Modules/clinic/_elementtree.c.h',
  # 'Modules/clinic/_functoolsmodule.c.h',
  # 'Modules/clinic/_gdbmmodule.c.h',
  # 'Modules/clinic/_hashopenssl.c.h',
  # 'Modules/clinic/_heapqmodule.c.h',
  # 'Modules/clinic/_localemodule.c.h',
  # 'Modules/clinic/_lsprof.c.h',
  # 'Modules/clinic/_lzmamodule.c.h',
  # 'Modules/clinic/_opcode.c.h',
  # 'Modules/clinic/_operator.c.h',
  # 'Modules/clinic/_pickle.c.h',
  # 'Modules/clinic/_posixsubprocess.c.h',
  # 'Modules/clinic/_queuemodule.c.h',
  # 'Modules/clinic/_randommodule.c.h',
  # 'Modules/clinic/_ssl.c.h',
  # 'Modules/clinic/_statisticsmodule.c.h',
  # 'Modules/clinic/_struct.c.h',
  # 'Modules/clinic/_suggestions.c.h',
  # 'Modules/clinic/_sysconfig.c.h',
  # 'Modules/clinic/_testclinic.c.h',
  # 'Modules/clinic/_testclinic_depr.c.h',
  # 'Modules/clinic/_testclinic_limited.c.h',
  # 'Modules/clinic/_testinternalcapi.c.h',
  # 'Modules/clinic/_testmultiphase.c.h',
  # 'Modules/clinic/_threadmodule.c.h',
  # 'Modules/clinic/_tkinter.c.h',
  # 'Modules/clinic/_tracemalloc.c.h',
  # 'Modules/clinic/_typingmodule.c.h',
  # 'Modules/clinic/_weakref.c.h',
  # 'Modules/clinic/_winapi.c.h',
  # 'Modules/clinic/_zoneinfo.c.h',
  # 'Modules/clinic/arraymodule.c.h',
  # 'Modules/clinic/binascii.c.h',
  # 'Modules/clinic/blake2module.c.h',
  # 'Modules/clinic/cmathmodule.c.h',
  # 'Modules/clinic/fcntlmodule.c.h',
  # 'Modules/clinic/gcmodule.c.h',
  # 'Modules/clinic/grpmodule.c.h',
  # 'Modules/clinic/itertoolsmodule.c.h',
  # 'Modules/clinic/mathmodule.c.h',
  # 'Modules/clinic/md5module.c.h',
  # 'Modules/clinic/overlapped.c.h',
  # 'Modules/clinic/posixmodule.c.h',
  # 'Modules/clinic/pwdmodule.c.h',
  # 'Modules/clinic/pyexpat.c.h',
  # 'Modules/clinic/readline.c.h',
  # 'Modules/clinic/resource.c.h',
  # 'Modules/clinic/selectmodule.c.h',
  # 'Modules/clinic/sha1module.c.h',
  # 'Modules/clinic/sha2module.c.h',
  # 'Modules/clinic/sha3module.c.h',
  # 'Modules/clinic/signalmodule.c.h',
  # 'Modules/clinic/socketmodule.c.h',
  # 'Modules/clinic/symtablemodule.c.h',
  # 'Modules/clinic/syslogmodule.c.h',
  # 'Modules/clinic/termios.c.h',
  # 'Modules/clinic/timemodule.c.h',
  # 'Modules/clinic/unicodedata.c.h',
  # 'Modules/clinic/zlibmodule.c.h',
  'Modules/cmathmodule.c',
  'Modules/errnomodule.c',
  # 'Modules/expat/ascii.h',
  # 'Modules/expat/asciitab.h',
  # 'Modules/expat/expat.h',
  # 'Modules/expat/expat_config.h',
  # 'Modules/expat/expat_external.h',
  # 'Modules/expat/iasciitab.h',
  # 'Modules/expat/internal.h',
  # 'Modules/expat/latin1tab.h',
  # 'Modules/expat/nametab.h',
  # 'Modules/expat/pyexpatns.h',
  # 'Modules/expat/siphash.h',
  # 'Modules/expat/utf8tab.h',
  # 'Modules/expat/winconfig.h',
  # 'Modules/expat/xmlparse.c',
  # 'Modules/expat/xmlrole.c',
  # 'Modules/expat/xmlrole.h',
  # 'Modules/expat/xmltok.c',
  # 'Modules/expat/xmltok.h',
  # 'Modules/expat/xmltok_impl.c',
  # 'Modules/expat/xmltok_impl.h',
  # 'Modules/expat/xmltok_ns.c',
  'Modules/faulthandler.c',
  'Modules/fcntlmodule.c',
  'Modules/gcmodule.c',
  'Modules/getaddrinfo.c',
  'Modules/getbuildinfo.c',
  'Modules/getnameinfo.c',
  # 'Modules/getpath.c',
  # 'Modules/getpath_noop.c',
  'Modules/grpmodule.c',
  'Modules/hashlib.h',
  'Modules/itertoolsmodule.c',
  # 'Modules/main.c',
  'Modules/mathmodule.c',
  # 'Modules/md5module.c',
  'Modules/mmapmodule.c',
  # 'Modules/overlapped.c',
  'Modules/posixmodule.c',
  'Modules/posixmodule.h',
  'Modules/pwdmodule.c',
  'Modules/pyexpat.c',
  'Modules/readline.c',
  'Modules/resource.c',
  'Modules/rotatingtree.c',
  'Modules/rotatingtree.h',
  'Modules/selectmodule.c',
  # 'Modules/sha1module.c',
  # 'Modules/sha2module.c',
  # 'Modules/sha3module.c',
  'Modules/signalmodule.c',
  'Modules/socketmodule.c',
  'Modules/socketmodule.h',
  'Modules/symtablemodule.c',
  'Modules/syslogmodule.c',
  'Modules/termios.c',
  'Modules/timemodule.c',
  # 'Modules/tkappinit.c',
  # 'Modules/tkinter.h',
  'Modules/unicodedata.c',
  'Modules/unicodedata_db.h',
  'Modules/unicodename_db.h',
  'Modules/winreparse.h',
  'Modules/xxlimited.c',
  'Modules/xxlimited_35.c',
  'Modules/xxmodule.c',
  'Modules/xxsubtype.c',
  'Modules/zlibmodule.c',

  # 'Modules/config.c',
)

py_c_args = [
  '-DPy_BUILD_CORE',
  '-DPy_ENABLE_SHARED',
  '-DSOABI="cpython-314-x86_64-linux-gnu"',
]

# common sources between helper tools and primary targets
libpy3_base = static_library('py3-base',
  sources: [py_sources, pyconfig_h],
  include_directories: py_include_dirs,
  c_args: py_c_args,
  dependencies: py_deps,
  install: false)

py3_base_dep = declare_dependency(
  link_with: libpy3_base,
  sources: pyconfig_h)

_freeze_module = executable('_freeze_module',
  sources: [
    'Programs/_freeze_module.c',
    'Modules/getpath_noop.c',
    config_c,
  ],
  include_directories: py_include_dirs,
  c_args: py_c_args,
  dependencies: [py_deps, py3_base_dep])

subdir('Python/frozen_modules')

libgetpath = static_library('python3-getpath',
  sources: [
    'Modules/getpath.c',
    freeze_module_targets,
  ],
  include_directories: py_include_dirs,
  c_args: [
    py_c_args,
    '-DPREFIX="/usr/local"',
    '-DEXEC_PREFIX="/usr/local"',
    '-DVERSION="3.14.0"',
    '-DPLATLIBDIR="lib"',
    '-DVPATH=""',
  ])

libpython = library('python3',
  sources: [
    'Python/frozen.c',
    config_c,
    freeze_module_targets,
  ],
  include_directories: py_include_dirs,
  c_args: py_c_args,
  dependencies: [py_deps, py3_base_dep],
  link_with: libgetpath,
  install: true,
  version: meson.project_version(),
  soversion: '3')

python3_dep = declare_dependency(
  include_directories: include_directories('Include'),
  link_with: libpython)

python3 = executable('python3',
  sources: files(
    'Programs/python.c',
    'Modules/main.c',
  ),
  c_args: py_c_args,
  include_directories: py_include_dirs,
  dependencies: python3_dep,
  install: true)
